# web-agent

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  task.txt  task2.txt
src/: agent_runner.py  main.py
src/agent/: graph.py  models.py  nodes.py  prompt_loader.py  prompts.yml  state.py
src/browser_controller/: base.py  playwright_controller.py
src/utils/: config.py  execution_tracker.py  log.py  result_formatter.py  task_parser.py
